# mintimegrad

./: .bumpversion.cfg  .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
conda.recipe/: meta.yaml
mintimegrad/: mtg.c  mtg.cpp  mtg.h  mtg_c.c  mtg_c.h  spline.c  spline.h
